--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -2,9 +2,19 @@
   border-radius: 10px;
   box-shadow: 0px 5px 20px black;
   margin: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   min-width: 40%;
+}
+
+.recipe ul {
+  max-width: 25rem;
+}
+
+.recipe img {
+  max-width: 16rem;
+  margin: 10px 0px;
+  border-radius: 50%;
 }
