added selection buttons

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,19 @@
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+.select-btn {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 0px;
+  background-color: indigo;
+  font-size: x-large;
+  color: aliceblue;
+  cursor: pointer;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-around;
+}
