--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
+* {
+  color: white;
+}
+
 .App {
-  min-height: 100vh;
-  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  min-height: 80vh;
+  /* background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); */
+  background-color: rgb(53, 56, 58);
 }
 
 .recipes {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.main-sec {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 10px;
   flex-wrap: wrap;
 }
