--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding: 20px 0px;
+  margin-bottom: 30px;
 }
 
 #edamam-badge {
@@ -12,7 +14,7 @@ button {
   cursor: pointer;
   font-weight: 700;
   height: 2rem;
-  background: rgb(6, 24, 73);
+  background: rgb(74, 15, 114);
   border: none;
   border-radius: 5px;
   padding: 10px;
