--- a/src/Components/recipe.module.css
+++ b/src/Components/recipe.module.css
@@ -4,13 +4,13 @@
 
 .recipe {
   border-radius: 10px;
-  box-shadow: 0px 5px 20px black;
-  margin: 20px;
+  box-shadow: 0px 5px 20px rgb(158, 157, 157);
+  margin: 30px 20px;
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 40%;
+  max-width: 18rem;
 }
 
 .recipe ul {
