--- a/src/Components/search.css
+++ b/src/Components/search.css
@@ -1,3 +1,14 @@
+.search-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.search-text {
+  font-weight: 500;
+}
+
 .search-form {
   min-height: 10vh;
   display: flex;
@@ -6,7 +17,7 @@
 }
 
 .search-bar {
-  width: 40%;
+  width: 60%;
   border: none;
   padding: 10px;
   border-radius: 5px;
@@ -19,4 +30,10 @@
   padding: 10px 20px;
   color: white;
   margin-left: 5px;
+}
+
+@media (min-width: 960px) {
+  .search-container {
+    margin-top: 0px;
+  }
 }
