--- a/src/Components/selectBtn.css
+++ b/src/Components/selectBtn.css
@@ -3,13 +3,15 @@
   height: 100px;
   border-radius: 50%;
   border: 0px;
-  background-color: indigo;
+  background: rgb(74, 15, 114);
   font-size: x-large;
   color: aliceblue;
   cursor: pointer;
+  margin-left: 5px;
 }
 
 .btn-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
