--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -4,10 +4,7 @@
   justify-content: space-around;
   padding: 20px 0px;
   margin-bottom: 30px;
-}
-
-#edamam-badge {
-  float: right;
+  flex-wrap: wrap;
 }
 
 button {
@@ -19,4 +16,10 @@ button {
   border-radius: 5px;
   padding: 10px;
   color: white;
+}
+
+@media screen and (max-width: 760px) {
+  .header h1 {
+    font-size: medium;
+  }
 }
