--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -9,13 +9,12 @@
 
 button {
   cursor: pointer;
-  font-weight: 700;
-  height: 2rem;
   background: rgb(74, 15, 114);
   border: none;
   border-radius: 5px;
-  padding: 10px;
   color: white;
+  width: 3rem;
+  height: 3rem;
 }
 
 @media screen and (max-width: 760px) {
