--- a/src/Components/search.css
+++ b/src/Components/search.css
@@ -20,15 +20,17 @@
   border: none;
   padding: 10px;
   border-radius: 5px;
+  color: black;
 }
 
 .search-button {
   background: rgb(74, 15, 114);
   border: none;
   border-radius: 5px;
-  padding: 10px 20px;
   color: white;
   margin-left: 5px;
+  width: 4rem;
+  height: 2.3rem;
 }
 
 @media (min-width: 960px) {
