--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -18,7 +18,7 @@ button {
 }
 
 @media screen and (max-width: 760px) {
-  .header h1 {
-    font-size: medium;
+  .badge {
+    display: none;
   }
 }
