--- a/src/Components/search.css
+++ b/src/Components/search.css
@@ -1,4 +1,5 @@
 .search-container {
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,21 +17,21 @@
 }
 
 .search-bar {
-  width: 60%;
+  height: 2.8rem;
+  width: 100%;
   border: none;
-  padding: 10px;
   border-radius: 5px;
   color: black;
 }
 
 .search-button {
   background: rgb(74, 15, 114);
-  border: none;
   border-radius: 5px;
   color: white;
-  margin-left: 5px;
-  width: 4rem;
-  height: 2.3rem;
+  margin-left: 1rem;
+  width: 5rem;
+  height: 3rem;
+  font-size: large;
 }
 
 @media (min-width: 960px) {
