--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,6 @@
 .main-sec {
   display: flex;
   justify-content: space-around;
-  margin: 20px 20px;
+  margin: 0px 20px 40px;
   flex-wrap: wrap;
 }
